clang/test/CIR/IR/invalid.cir
// Test attempts to build bogus CIR
// RUN: cir-tool %s -verify-diagnostics -split-input-file

// expected-error@+2 {{'cir.cst' op nullptr expects pointer type}}
func @p0() {
  %1 = cir.cst(nullptr) : i32
  cir.return
}

// -----

// expected-error@+2 {{'cir.cst' op result type ('i32') must be '!cir.bool' for 'true'}}
func @b0() {
  %1 = cir.cst(true) : i32
  cir.return
}